deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      name: my-pod
      labels:
        app: my-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: my-app
      containers:
        - name: my-container
          image: busybox:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: efs-volume
              mountPath: /path/to/mount
            - name: config-volume
              mountPath: /path/to/config
      volumes:
        - name: efs-volume
          persistentVolumeClaim:
            claimName: efs-pvc
        - name: config-volume
          configMap:
            name: my-configmap
